--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,34 +3,29 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                  <img src="img/portfolio/jean.jpg" class="img-responsive img-circle" width=225 height=225 alt="" style="margin-bottom:25px;display:inline-block">
                     <h2 class="section-heading">Ma motivation</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Jean Zoungrana</h3>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Ma motivation</h4>
-                    <p class="text-muted">Membre actif et observateur de notre fédération, j’ai été le témoin de nos réussites, mais aussi de nos difficultés, et d’un certain nombre de dysfonctionnements dont certains sont structurels et d’autres davantage liés aux orientations et aux acteurs de notre système.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Une équipe</h4>
-                    <p class="text-muted">De ces constats deux voies s’offraient à moi. La tentation du repli sur ma région pour y consacrer toute mon énergie face à un système centralisé dans lequel les territoires ont peu de poids, ou, au contraire, l’en- gagement afin de proposer une alternative et de mettre en avant des valeurs, des orientations, un mode de gouvernance différents.</p>
-                </div>
+<!-- <div class="col-md-4">
+<img src="img/team/jean.jpg" class="img-responsive img-circle" width=225 height=225 alt="" style="margin-bottom:25px;display:inline-block">
+</div> -->
+                <div class="col-md-12">
+                    <!-- <h4 class="service-heading">Ma motivation</h4> -->
+                    <p><strong>Membre actif et observateur de notre fédération, j’ai été le témoin de nos réussites</strong>, mais aussi de nos difficultés, et d’un certain nombre de dysfonctionnements dont certains sont structurels et d’autres davantage liés aux orientations et aux acteurs de notre système.</p>
+                    <p>De ces constats deux voies s’offraient à moi. La tentation du repli sur ma région pour y consacrer toute mon énergie face à un système centralisé dans lequel les territoires ont peu de poids, ou, au contraire, <strong>l’engagement afin de proposer une alternative et de mettre en avant des valeurs, des orientations, un mode de gouvernance différents.</strong></p>
+                <!-- </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Un projet</h4>
-                    <p class="text-muted">C’est cette seconde voie que j’ai choisie avec la volon- té de rassembler et de mettre mes compétences et mon expérience au service de notre fédération, per- suadé qu’ensemble, au-delà de nos différentes sensi- bilités et dans le respect de tous et de chacun, nous serons en mesure de faire évoluer cette fédération à laquelle nous sommes toutes et tous attachés.</p>
+                    </span>-->
+                    <!-- <h4 class="service-heading">Un projet</h4> -->
+                    <p>C’est cette seconde voie que j’ai choisie avec la volonté de rassembler et de mettre mes compétences et mon expérience au service de notre fédération, persuadé qu’ensemble, au-delà de nos différentes sensibilités et dans le respect de tous et de chacun, nous serons en mesure de <strong>faire évoluer cette fédération à laquelle nous sommes toutes et tous attachés.</strong></p>
+<h3 class="section-subheading text-muted"></h3>
+<img src="img/signature.jpg" class="img-responsive" width=225 alt="" style="margin-bottom:25px;display:inline-block">
                 </div>
             </div>
         </div>
