--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,15 +3,62 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">L'équipe</h2>
-                    <h3 class="section-subheading text-muted">Une équipe renouvelée et plurielle au plan des régions, des disciplines, des genres, des générations, des sensibilités et des compétences pour répondre aux différents enjeux de ce projet.</h3>
+                    <!-- <span class="fa-stack fa-4x">
+                      <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                      <i class="fa fa-group fa-stack-1x fa-inverse"></i>
+                    </span> -->
+                    <h2 class="section-heading">Une équipe</h2>
+                    <h3 class="section-subheading text-muted">Une nouvelle équipe pour un nouvel élan</h3>
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <!-- <h4 class="service-heading">Ma motivation</h4> -->
+                            <p>J’ai souhaité vous proposer <strong>une équipe renouvelée et plurielle</strong> au plan des <strong>régions</strong>, des <strong>disciplines</strong>, des <strong>genres</strong>, des <strong>générations</strong>, des <strong>sensibilités</strong> et des <strong>compétences</strong> pour répondre aux différents enjeux de ce projet.</p>
+<!-- </div><div class="col-md-4"> -->
+                            <p>Une équipe <strong>proche du terrain</strong>. Une équipe dont les membres ont <strong>l’expérience du fonctionnement de nos instances et de nos structures</strong> -clubs, CDCK, CRCK, Pôles- et <strong>du haut niveau</strong></p>
+<!-- </div><div class="col-md-4"> -->
+                            <p>J’envisage par la suite que 4 autres membres puissent conforter cette équipe après modification des statuts relatifs à la composition du Bureau Exécutif qui passerait ainsi de 6 à 10 membres.</p>
+                        </div>
+                    </div>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
-                {% for member in site.people %}
+
+                {% for post in site.categories.equipe %}
+                <div class="col-sm-4">
+                  <div class="team-member">
+                      <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal" style="display:flex;justify-content:space-around;align-items:center;">
+                          <div class="portfolio-hover" style="flex-basis:225px;">
+                              <div class="portfolio-hover-content">
+                                  <i>{{ post.subtitle }}</i>
+                              </div>
+                          </div>
+                          <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-circle" width=225 height=225 alt="">
+                      </a>
+                      <div class="portfolio-caption">
+                          <h4>{{ post.title }}</h4>
+                          <p class="text-muted">{{ post.subtitle }}</p>
+                          <ul class="list-inline social-buttons">
+                            {% for network in member.social %}
+                            <li>
+                                <a href="{{ network.url }}">
+                                    <i class="fa fa-{{ network.title }}"></i>
+                                </a>
+                            </li>
+                            {% endfor %}
+                          </ul>
+                      </div>
+                  </div>
+                </div>
+                {% endfor %}
+
+
+
+
+                <!-- {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" width=225 height=225 alt="">
+                        <img src="img/portfolio/{{ member.pic }}.jpg" class="img-responsive img-circle" width=225 height=225 alt="">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
@@ -26,15 +73,7 @@
                         </ul>
                     </div>
                 </div>
-                {% endfor %}
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-
-<p class="large text-muted">Une équipe proche du terrain. Une équipe dont les membres ont l’expérience du fonctionnement de nos instances et de nos structures  -clubs, CDCK, CRCK, Pôles- et du haut niveau.</p>
-<p class="large text-muted">
-Par la suite, il est envisagé que 4 autres membres puissent conforter cette équipe après modification des statuts relatifs à la composition du Bureau Exécutif, qui passerait ainsi de 6 à 10 membres.</p>
-                </div>
+                {% endfor %} -->
             </div>
         </div>
     </section>
