--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contactez nous !</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Nous soumettons ce projet à votre expertise. Nous resterons à l’écoute de tous pour que chacun puisse contribuer à alimenter cette réflexion qui doit donner un nouvel élan à notre fédération.</h3>
                 </div>
             </div>
             <div class="row">
@@ -11,6 +11,7 @@
                     <form name="sentMessage" id="contactForm" action="https://formspree.io/vincent.lecrubier@gmail.com"
       method="POST" novalidate>
 <!-- <input type="hidden" name="_cc" value="zoungrana.jean@orange.fr,annelaureviard@orange.fr,jgaspard.ic@gmail.com,Emmanuel.Girard@univ-nantes.fr,frseseiler@gmail.com,ludovicroye@gmail.com" /> -->
+<input type="hidden" name="_next" value="#contact" />
 <input type="text" name="_gotcha" style="display:none" />
                         <div class="row">
                             <div class="col-md-6">
@@ -25,7 +26,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Votre message *" id="message" required data-validation-required-message="Merci d'entrer votre message."></textarea>
+                                    <textarea class="form-control" placeholder="Votre message *" id="message" required data-validation-required-message="Merci d'entrer votre message." name="message"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
