--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -269,6 +269,7 @@ header {
     background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
     background-position: center center;
     background-repeat: none;
+    background-color: #004080;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -351,19 +352,22 @@ section h3.section-subheading {
     text-transform: none;
 }
 
-#portfolio .portfolio-item {
+#portfolio .portfolio-item,
+#team .team-member  {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#portfolio .portfolio-item .portfolio-link,
+#team .team-member .portfolio-link{
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#portfolio .portfolio-item .portfolio-link .portfolio-hover,
+#team .team-member .portfolio-link .portfolio-hover {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -375,11 +379,18 @@ section h3.section-subheading {
     background: rgba({{ site.data.template.color.primary | hex_to_rgb | join: ',' }}, .9);
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+#team .team-member .portfolio-link .portfolio-hover {
+    border-radius:50%;
+    width:225px;
+}
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover,
+#team .team-member .portfolio-link .portfolio-hover:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content,
+#team .team-member .portfolio-link .portfolio-hover .portfolio-hover-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -388,7 +399,15 @@ section h3.section-subheading {
     text-align: center;
     font-size: 20px;
     color: #fff;
+    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-style:normal;
+    font-size:32pt;
 }
+
+#team .team-member .portfolio-link .portfolio-hover .portfolio-hover-content {
+    font-size:20pt;
+}
+
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
     margin-top: -12px;
@@ -443,7 +462,7 @@ section h3.section-subheading {
     left: 40px;
     width: 2px;
     margin-left: -1.5px;
-    background-color: #f1f1f1;
+    background-color: #999999;
 }
 
 .timeline>li {
@@ -491,7 +510,8 @@ section h3.section-subheading {
     width: 80px;
     height: 80px;
     margin-left: 0;
-    border: 7px solid #f1f1f1;
+    border:none;
+    /*border: 7px solid #f1f1f1;*/
     border-radius: 100%;
     text-align: center;
     color: #fff;
@@ -636,7 +656,8 @@ section h3.section-subheading {
 
 .team-member img {
     margin: 0 auto;
-    border: 7px solid #fff;
+    border: none;
+    /*border: 7px solid #fff;*/
 }
 
 .team-member h4 {
@@ -655,7 +676,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url('{{ site.baseurl }}/img/map-image.png');
+    /*background-image: url('{{ site.baseurl }}/img/map-image.png');*/
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -804,6 +825,32 @@ ul.social-buttons li a:active {
 
 .portfolio-modal .modal-content img {
     margin-bottom: 30px;
+}
+
+.modal-content-text {
+    text-align: justify;
+    margin-bottom: 40px;
+}
+
+.modal-content-text p{
+    margin-bottom: 10px !important;
+}
+
+.modal-content-text h3{
+    margin-top: 40px !important;
+}
+
+.modal-content-text h2{
+    margin-top: 40px !important;
+}
+
+.modal-content-text h4{
+    margin-top: 30px !important;
+}
+
+.modal-content-text li{
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .portfolio-modal .close-modal {
