--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,29 +1,50 @@
 <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-            {% for post in site.posts %}
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>{{ post.title }}</h4>
-                        <p class="text-muted">{{ post.subtitle }}</p>
+<section id="portfolio" class="">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <!-- <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
+                </span> -->
+                <h2 class="section-heading">Un projet</h2>
+                <h3 class="section-subheading text-muted">Un nouveau projet pour un nouvel élan</h3>
+                <div class="row text-center">
+                    <div class="col-md-12">
+                        <!-- <h4 class="service-heading">Ma motivation</h4> -->
+                        <p><strong>Un projet qui prend en compte notre identité, réaffirme nos valeurs et dessine des orientations</strong> en terme de gouvernance, de formation, de haut niveau, de pratiques, de sites de pratiques, d’infrastructures et
+                            d’équipements. Enfin, <strong>un projet qui s’adresse à toutes nos structures, nos territoires nos pratiquants et nos cadres.</strong></p>
+                        <p>
+                            <strong>Ce projet se place en continuité des politiques menées par les présidents successifs sur les éléments positifs</strong> de notre fédération et qui constituent notre <strong>bien commun, notre histoire et notre héritage</strong>                            en quelque sorte.</p>
+                        <p>
+                            <strong>Il est aussi en rupture sur certains aspects de notre gouvernance et sur certaines orientations afin de proposer une vision nouvelle</strong>, propre à répondre aux éléments de contexte avec lesquels nous devons
+                            composer aujourd’hui : La loi NOTRe et les nouvelles territorialités, le renforcement du pouvoir des régions, la montée en puissance des intercommunalités, le désengagement de l’Etat qui touche nos ressources financières
+                            et nos cadres, les formes de pratiques plus individuelles et les nouvelles sociabilités numériques, l’exigence vitale de l’excellence au plus haut niveau mais aussi les enjeux liés à l’essor des pratiques non compétitives
+                            – loisir, tourisme, santé, insertion – et au sport pour tous nos publics, nos sites de pratiques et les enjeux environnementaux.</p>
+                        <p>
+                            <strong>Nous soumettons ce projet à votre expertise. Je resterai à l’écoute de tous pour que chacun puisse contribuer à alimenter cette réflexion qui doit donner un nouvel élan à notre fédération.</strong></p>
                     </div>
                 </div>
-            {% endfor %}
+                <h3 class="section-subheading text-muted"></h3>
             </div>
         </div>
-    </section>
+        <div class="row">
+            {% for post in site.categories.projet %}
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i>{{ post.modal-id }}</i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>{{ post.title }}</h4>
+                    <p class="text-muted">{{ post.subtitle }}</p>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
