--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,13 +7,9 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
-    {% include team.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
+    {{ content }}
     {% include contact.html %}
     {% include footer.html %}
-    {% include modals.html %}
     {% include js.html %}
 
     </body>
