Ajout des items

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                         <a class="page-scroll" href="#portfolio">Un projet</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Une histoire</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
