--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Une histoire</h2>
+                    <h3 class="section-subheading text-muted">Voici une histoire</h3>
                 </div>
             </div>
             <div class="row">
@@ -68,9 +68,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Faites partie
+                                    <br>de cette
+                                    <br>Histoire !</h4>
                             </div>
                         </li>
                     </ul>
