--- a/_includes/about.html
+++ b/_includes/about.html
@@ -68,9 +68,11 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Faites partie
-                                    <br>de cette
+<a class="page-scroll" href="#contact" style="color:#FFFFFF;">
+                                <h4>Entrez
+                                    <br>dans cette
                                     <br>Histoire !</h4>
+</a>
                             </div>
                         </li>
                     </ul>
