--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,8 +11,8 @@
                     <form name="sentMessage" id="contactForm" action="https://formspree.io/vincent.lecrubier@gmail.com"
       method="POST" novalidate>
 <!-- <input type="hidden" name="_cc" value="zoungrana.jean@orange.fr,annelaureviard@orange.fr,jgaspard.ic@gmail.com,Emmanuel.Girard@univ-nantes.fr,frseseiler@gmail.com,ludovicroye@gmail.com" /> -->
-<input type="hidden" name="_next" value="#contact" />
-<input type="text" name="_gotcha" style="display:none" />
+                        <input type="hidden" name="_next" value="/merci-message" />
+                        <input type="text" name="_gotcha" style="display:none" />
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
