--- a/_includes/merci.html
+++ b/_includes/merci.html
@@ -19,19 +19,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Une motivation</a>
+                        <a class="page-scroll" href="/#services">Une motivation</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Une équipe</a>
+                        <a class="page-scroll" href="/#team">Une équipe</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Un projet</a>
+                        <a class="page-scroll" href="/#portfolio">Un projet</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Une histoire</a>
+                        <a class="page-scroll" href="/#about">Une histoire</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="/#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -44,10 +44,11 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Fédération Française de Canoë-Kayak</div>
-                <div class="intro-heading">Un nouvel élan</div>
-                <!-- <div class="intro-lead-in">Avec Jean Zoungrana</div> -->
-                <a href="#services" class="page-scroll btn btn-xl">En savoir plus</a>
+                <div class="intro-lead-in">Toute l'équipe vous dit</div>
+                <div class="intro-heading">Merci</div>
+                <div class="">Votre message a été envoyée à l'équipe, qui va le prendre en compte et vous répondre rapidement.</div>
+              <div class="intro-lead-in"></div>
+                <a href="/" class="page-scroll btn btn-xl">Revenir au site</a>
             </div>
         </div>
     </header>
