--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                   <img src="img/portfolio/jean.jpg" class="img-responsive img-circle" width=225 height=225 alt="" style="margin-bottom:25px;display:inline-block">
-                    <h2 class="section-heading">Ma motivation</h2>
+                    <h2 class="section-heading">Une motivation</h2>
                     <h3 class="section-subheading text-muted">Jean Zoungrana</h3>
                 </div>
             </div>
