--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,10 +6,8 @@
 
     <body id="page-top" class="index">
 
-    {% include header.html %}
-    {{ content }}
-    {% include contact.html %}
-    {% include footer.html %}
+    {% include pagecontent.html %}
+
     {% include js.html %}
 
     </body>
