--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -30,7 +30,7 @@
         </div>
         <div class="row">
             {% for post in site.categories.projet %}
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-md-4 col-sm-6 portfolio-item" id='{{post.modal-id}}'>
                 <a href="{{ post.url }}" class="portfolio-link" data-toggle="modal">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
