--- a/_includes/team.html
+++ b/_includes/team.html
@@ -25,7 +25,7 @@
             <div class="row">
 
                 {% for post in site.categories.equipe %}
-                <div class="col-sm-4">
+                <div class="col-sm-4" id='{{post.modal-id}}'>
                   <div class="team-member">
                         <a href="{{ post.url }}" class="portfolio-link" data-toggle="modal" style="display:flex;justify-content:space-around;align-items:center;">
                           <div class="portfolio-hover" style="flex-basis:225px;">
