--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">An Agency is Born</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Une passion qui va l’amener à naviguer avec ses copains de clubs en compétition au niveau national et à être sélectionné en junior en équipe de France</p>
                                 </div>
                             </div>
                         </li>
@@ -48,7 +48,7 @@
                                     <h4 class="subheading">Transition to Full Service</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">C’est aussi le temps de l’engagement bénévole au sein du club, du comité régional et de la fédération</p>
                                 </div>
                             </div>
                         </li>
