--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Une histoire</h2>
-                    <h3 class="section-subheading text-muted">Et enfin, une petite histoire...</h3>
+                    <h3 class="section-subheading text-muted">Pour savoir ou l'on va, il faut savoir d'ou l'on vient</h3>
+  <div class="row text-center">
+      <div class="col-md-12">
+          <!-- <h4 class="service-heading">Ma motivation</h4> -->
+          <p>Une histoire parmi toutes celles qui font la richesse du canoë-kayak. Comme toutes les histoire de kayakistes, elle se construit à plusieurs</p>
+<h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -17,10 +22,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>1968</h4>
-                                    <h4 class="subheading">L'histoire d'une passion</h4>
+                                    <h4 class="subheading">Les débuts d'une passion</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Celle d’un garçon qui découvre le kayak à 12 ans au club de Guingamp.</p>
+                                    <p class="text-muted">Celle d’un garçon qui découvre le kayak à 12 ans. Il découvre les sensations de glisse, la compétition et l'esprit d'équipe sur nos belles rivières...</p>
                                 </div>
                             </div>
                         </li>
@@ -30,11 +35,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>1981</h4>
+                                    <h4 class="subheading">Partager et transmettre</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Une passion qui va l’amener à naviguer avec ses copains de clubs en compétition au niveau national et à être sélectionné en junior en équipe de France</p>
+                                    <p class="text-muted">Un passion, cela se partage ! De sa passion il en fait son métier. L’enseignement est sa deuxième passion... </p>
                                 </div>
                             </div>
                         </li>
@@ -44,11 +49,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>1991</h4>
+                                    <h4 class="subheading">S'engager</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">C’est aussi le temps de l’engagement bénévole au sein du club, du comité régional et de la fédération</p>
+                                    <p class="text-muted">Le petit garçon est devenu vétéran ! C’est le temps d'un engagement bénévole au sein du club, du comité régional et de la fédération. Mais cela ne l'empêche pas de retomber en enfance dès qu’il y a une vague à surfer...</p>
                                 </div>
                             </div>
                         </li>
@@ -58,20 +63,34 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Années 2000</h4>
+                                    <h4 class="subheading">Faire avancer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">C’est aussi le temps de l’engagement bénévole au sein du club, du comité régional et de la fédération.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li >
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2016</h4>
+                                    <h4 class="subheading">Développer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Un engagement qu’il souhaite poursuivre en rassemblant et en donnant un nouvel élan à cette fédération à laquelle nous sommes tous attachés ! Et si vous rejoigniez son équipe et l’aidiez à réaliser ce projet ?</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
 <a class="page-scroll" href="#contact" style="color:#FFFFFF;">
-                                <h4>Entrez
-                                    <br>dans cette
-                                    <br>Histoire !</h4>
+<h4>Entrez
+<br>dans cette
+<br>Histoire !</h4>
 </a>
                             </div>
                         </li>
