--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,7 +8,7 @@
                   <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
                 </span> -->
                 <h2 class="section-heading">Un projet</h2>
-                <h3 class="section-subheading text-muted">Un nouveau projet pour un nouvel élan</h3>
+                <h3 class="section-subheading text-muted">Un projet pour structurer notre élan</h3>
                 <div class="row text-center">
                     <div class="col-md-12">
                         <!-- <h4 class="service-heading">Ma motivation</h4> -->
