--- a/_includes/merci.html
+++ b/_includes/merci.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+                <a class="navbar-brand page-scroll" href="/">{{site.title}}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,9 +27,9 @@
                     <li>
                         <a class="page-scroll" href="/#portfolio">Un projet</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="/#about">Une histoire</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="/#contact">Contact</a>
                     </li>
