--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,16 @@
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
 
+
+  <!-- Custom Fonts -->
+  <link rel="preload" as="style" onload="this.rel='stylesheet'" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" type='text/css'>
+  <link rel="preload" as="style" onload="this.rel='stylesheet'" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" type="text/css">
+  <link rel="preload" as="style" onload="this.rel='stylesheet'" href='https://fonts.googleapis.com/css?family=Kaushan+Script' type='text/css'>
+  <link rel="preload" as="style" onload="this.rel='stylesheet'" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"  type="text/css">
+  <link rel="preload" as="style" onload="this.rel='stylesheet'" href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' type='text/css'>
+  <link rel="preload" as="style" onload="this.rel='stylesheet'" href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' type='text/css'>
+
+<noscript>
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -17,6 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+</noscript>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
