--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -445,6 +445,7 @@ section h3.section-subheading {
 @media(min-width:767px) {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
+        float: right;
     }
 }
 
