--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -382,6 +382,9 @@ section h3.section-subheading {
 #team .team-member .portfolio-link .portfolio-hover {
     border-radius:50%;
     width:225px;
+    height:225px;
+    display:block;
+    margin: auto;
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover,
