--- a/_includes/js.html
+++ b/_includes/js.html
@@ -252,5 +252,5 @@ $('div.modal').on('show.bs.modal', function() {
       } )
     }
   }
-}( this ));
+}( typeof global !== "undefined" ? global : this  ));
 </script>
