--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -918,3 +918,11 @@ body {
 .nocolor:hover {
   color:#333;
 }
+
+.nocolormuted {
+  color:#{{ site.data.template.color.muted }};
+}
+
+.nocolormuted:hover {
+  color:#{{ site.data.template.color.muted }};
+}
