--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache">
+<html>
+<!-- <html manifest="manifest.appcache"> -->
 
   {% include head.html %}
 
@@ -10,10 +11,9 @@
     {% include services.html %}
     {% include team.html %}
     {% include portfolio_grid.html %}
-
+    {% include faq.html %}
     {% include contact.html %}
     {% include footer.html %}
-
     {% include js.html %}
 
     </body>
