--- a/_includes/team.html
+++ b/_includes/team.html
@@ -13,6 +13,10 @@
                         <div class="col-md-12">
                             <!-- <h4 class="service-heading">Ma motivation</h4> -->
                             <p>J’ai souhaité vous proposer <strong>une équipe renouvelée et plurielle</strong> au plan des <strong>régions</strong>, des <strong>disciplines</strong>, des <strong>genres</strong>, des <strong>générations</strong>, des <strong>sensibilités</strong> et des <strong>compétences</strong> pour répondre aux différents enjeux de ce projet.</p>
+
+<img src="img/localisationequipe.jpg" alt="Une équipe plurielle au plan des régions" class="img-responsive img-centered" usemap="#teammap"/>
+
+
 <!-- </div><div class="col-md-4"> -->
                             <p>Une équipe <strong>proche du terrain</strong>. Une équipe dont les membres ont <strong>l’expérience du fonctionnement de nos instances et de nos structures</strong> -clubs, CDCK, CRCK, Pôles- et <strong>du haut niveau</strong></p>
 <!-- </div><div class="col-md-4"> -->
